Fix T46494: Can't de-select a face w/ mixed modes